--- a/index.html
+++ b/index.html
@@ -3,10 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Restaurant</title>
   </head>
   <body>
-    <p>opa</p>
-    <p>agora</p>
+    <header>
+      <nav class="nav-bar">
+        <div class="logo-restaurant">
+          <a href="index.html">
+            <img
+              src="./assets/icons/logo-restaurant.png"
+              alt="Logo Restaurant"
+            />
+          </a>
+        </div>
+
+        <div class="nav-list">
+          <ul>
+            <li class="nav-item">
+              <a href="" class="nav-link">Menu </a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Events </a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">About </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="nav-button">
+          <a href="" class="btn btn-book-a-table">Book a table</a>
+        </div>
+      </nav>
+    </header>
   </body>
 </html>
