image and sections

--- a/index.html
+++ b/index.html
@@ -40,5 +40,13 @@
         </div>
       </nav>
     </header>
+
+    <main>
+      <section class="hero">
+        <div class="hero-content"></div>
+      </section>
+
+      <section class="our-special-dishes"></section>
+    </main>
   </body>
 </html>
