--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   </head>
   <body>
     <header>
+      <div class="borders">
+        <img src="./assets/images/second-ellipse.svg" alt="" class="border" />
+        <img
+          src="/assets/images/ellipse-svg.svg"
+          alt=""
+          class="second-border"
+        />
+        <img src="/assets/images/ellipse-svg.svg" alt="" class="third-border" />
+      </div>
+
       <nav class="nav-bar">
         <div class="logo-restaurant">
           <a href="index.html">
