--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <img src="/assets/images/ellipse-svg.svg" alt="" class="third-border" />
       </div>
 
+      <p>cachorro</p>
+
       <nav class="nav-bar">
         <div class="logo-restaurant">
           <a href="index.html">
