our special dishes

--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
       <div class="borders">
         <img src="./assets/images/second-ellipse.svg" alt="" class="border" />
         <img
-          src="/assets/images/ellipse-svg.svg"
+          src="./assets/images/ellipse-svg.svg"
           alt=""
           class="second-border"
         />
-        <img src="/assets/images/ellipse-svg.svg" alt="" class="third-border" />
+        <img
+          src="./assets/images/ellipse-svg.svg"
+          alt=""
+          class="third-border"
+        />
       </div>
-
-      <p>cachorro</p>
 
       <nav class="nav-bar">
         <div class="logo-restaurant">
@@ -58,7 +60,15 @@
         <div class="hero-content"></div>
       </section>
 
-      <section class="our-special-dishes"></section>
+      <section class="our-special-dishes">
+        <div class="our-special-dishes-content">
+          <h2 class="our-special-dishes-title">Our Special Dishes</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt
+          </p>
+        </div>
+      </section>
     </main>
   </body>
 </html>
