--- a/index.html
+++ b/index.html
@@ -5,23 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Restaurant</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <header>
       <div class="borders">
         <img src="./assets/images/second-ellipse.svg" alt="" class="border" />
         <img
-          src="/assets/images/ellipse-svg.svg"
+          src="./assets/images/ellipse-svg.svg"
           alt=""
           class="second-border"
         />
-        <img src="/assets/images/ellipse-svg.svg" alt="" class="third-border" />
+        <img src="./assets/images/ellipse-svg.svg" alt="" class="third-border" />
       </div>
 
-      <p>cachorro</p>
 
-      <nav class="nav-bar">
-        <div class="logo-restaurant">
+
+       <nav class="nav-bar">
+        <div class="logo-restaurant"
           <a href="index.html">
             <img
               src="./assets/icons/logo-restaurant.png"
@@ -55,7 +62,41 @@
 
     <main>
       <section class="hero">
-        <div class="hero-content"></div>
+        <div class="hero-content">
+          <h1 class="hero-title"> We provide the best food for you </h1>
+          <p class="hero-text">Lorem ipsum dolor sit amet, consectetur 
+            adipiscing elit, sed do eiusmod tempor incididunt 
+            ut labore et dolore magna aliqua.</p>
+          <div class="hero-buttons">
+          <a href="" class="btn btn-hero-menu">Menu</a>
+          <a href="" class="btn btn-book-a-table">Book a table</a>
+          </div>
+
+          <div class="hero-social-media">
+          <a href="#" class="hero-link" id="facebook">
+            <i class="fa-brands fa-facebook-f"></i>
+          </a>
+          <a href="#" class="hero-link" id="instagram">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a href="#" class="hero-link" id="twitter">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+
+          <div> 
+            <img src="./assets/images/plate-img.png" alt="plate" class="hero-image-plate">
+            <img src="./assets/images/ambient-vertical-image.png" alt="ambient" 
+            class="hero-ambient-image">
+
+          </div>
+          </div>
+
+          <img src="./assets/images/first-plant.svg" alt="plant" class="first-plant">
+          <img src="./assets/images/second-plant.svg" alt="plant" class="second-plant">
+          <img src="./assets/images/third-plant.svg" alt="plant" class="third-plant">
+          <img src="./assets/images/fourth-plant.svg" alt="plant" class="fourth-plant">
+        </div>
+        
       </section>
 
       <section class="our-special-dishes"></section>
