ajuste de imagem

--- a/index.html
+++ b/index.html
@@ -87,23 +87,21 @@
               <i class="fa-brands fa-twitter"></i>
             </a>
           </div>
-
-          <div>
-            <img
-              src="./assets/images/plate-img.png"
-              alt="plate"
-              class="hero-image-plate"
-            />
-          </div>
-
-          <div>
-            <img
-              src="./assets/images/ambient-vertical-image.png"
-              alt="ambient"
-              class="hero-ambient-image"
-            />
-          </div>
         </div>
+
+        <div class="hero-container">
+          <img
+            src="./assets/images/plate-img.png"
+            alt="plate"
+            class="hero-image-plate"
+          />
+          <img
+            src="./assets/images/ambient-vertical-image.png"
+            alt="ambient"
+            class="hero-ambient-image"
+          />
+        </div>
+
         <img
           src="./assets/images/first-plant.svg"
           alt="plant"
