imagem do plate no local correto

--- a/index.html
+++ b/index.html
@@ -92,6 +92,20 @@
             </a>
           </div>
         </div>
+        <div>
+          <img
+            class="hero-ambient-image"
+            src="./assets/images/ambient-vertical-image.png"
+            alt="imagem do ambiente"
+          />
+          <div>
+            <img
+              class="hero-image-plate"
+              src="./assets/images/plate-img.png"
+              alt="plate"
+            />
+          </div>
+        </div>
       </section>
 
       <section class="our-special-dishes">
