--- a/index.html
+++ b/index.html
@@ -92,17 +92,40 @@
             </a>
           </div>
         </div>
-        <div>
-          <img
-            class="hero-ambient-image"
-            src="./assets/images/ambient-vertical-image.png"
-            alt="imagem do ambiente"
-          />
+        <div class="container-hero-images">
+          <div>
+            <img
+              class="hero-ambient-image"
+              src="./assets/images/ambient-vertical-image.png"
+              alt="imagem do ambiente"
+            />
+          </div>
           <div>
             <img
               class="hero-image-plate"
               src="./assets/images/plate-img.png"
               alt="plate"
+            />
+          </div>
+          <div>
+            <img
+              class="hero-img-first-plant"
+              src="./assets/images/first-plant.svg"
+              alt="first-plant"
+            />
+          </div>
+          <div>
+            <img
+              class="hero-img-second-plant"
+              src="./assets/images/second-plant.svg"
+              alt="second-plant"
+            />
+          </div>
+          <div>
+            <img
+              class="hero-img-third-plant"
+              src="./assets/images/third-plant.svg"
+              alt="third-plant"
             />
           </div>
         </div>
