--- a/index.html
+++ b/index.html
@@ -136,6 +136,29 @@
           <h2 class="our-special-dishes-title">Our Special Dishes</h2>
           <p class="our-special-dishes-text">Taste the best of our cuisine!</p>
         </div>
+        <div class="our-special-dishes-flex">
+          <div class="our-special-dishes-box">
+            <img src="./assets/images/third-plate.png" alt="third plate" />
+            <h3>Fish and Veggie</h3>
+            <p>Grilled fish with fresh veggies, light and flavorful!</p>
+          </div>
+
+          <div class="our-special-dishes-box">
+            <img src="./assets/images/third-plate.png" alt="third plate" />
+            <h3>Fish and Veggie</h3>
+            <p>Grilled fish with fresh veggies, light and flavorful!</p>
+          </div>
+          <div class="our-special-dishes-box">
+            <img src="./assets/images/third-plate.png" alt="third plate" />
+            <h3>Fish and Veggie</h3>
+            <p>Grilled fish with fresh veggies, light and flavorful!</p>
+          </div>
+          <div class="our-special-dishes-box">
+            <img src="./assets/images/third-plate.png" alt="third plate" />
+            <h3>Fish and Veggie</h3>
+            <p>Grilled fish with fresh veggies, light and flavorful!</p>
+          </div>
+        </div>
       </section>
     </main>
   </body>
