welcome quase finalizado

--- a/index.html
+++ b/index.html
@@ -137,6 +137,28 @@
           <p class="our-special-dishes-text">Taste the best of our cuisine!</p>
         </div>
       </section>
+      <section class="welcome-to-our-restaurant">
+        <div class="welcome-content">
+          <h2 class="welcome-title">
+            Wecome to Our <br />
+            Restaurant
+          </h2>
+          <div class="welcome-text">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur <br />
+              adipiscing elit, sed do eiusmod tempor incididunt
+              <br />ut labore et dolore magna aliqua.
+            </p>
+          </div>
+          <div class="welcome-buttons">
+            <a href="" class="btn btn-hero-menu">Menu</a>
+            <a href="" class="btn btn-book-a-table">Book a table</a>
+          </div>
+        </div>
+        <div class="welcome-image">
+          <img src="./assets/images/big-plate.png" alt="plate" />
+        </div>
+      </section>
     </main>
   </body>
 </html>
