--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
         <div class="nav-list">
           <ul>
             <li class="nav-item">
-              <a href="" class="nav-link">Menu </a>
+              <a href="#" class="nav-link">Menu </a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">Events </a>
+              <a href="#" class="nav-link">Events </a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">Gallery</a>
+              <a href="#" class="nav-link">Gallery</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">About </a>
+              <a href="#" class="nav-link">About </a>
             </li>
           </ul>
         </div>
 
         <div class="nav-button">
-          <a href="" class="btn btn-book-a-table">Book a table</a>
+          <a href="#" class="btn btn-book-a-table">Book a table</a>
         </div>
       </nav>
     </header>
@@ -76,8 +76,8 @@
             ut labore et dolore magna aliqua.
           </p>
           <div class="hero-buttons">
-            <a href="" class="btn btn-hero-menu">Menu</a>
-            <a href="" class="btn btn-book-a-table">Book a table</a>
+            <a href="#" class="btn btn-hero-menu">Menu</a>
+            <a href="#" class="btn btn-book-a-table">Book a table</a>
           </div>
 
           <div class="hero-social-media">
@@ -163,7 +163,7 @@
       <section class="welcome-to-our-restaurant">
         <div class="welcome-content">
           <h2 class="welcome-title">
-            Wecome to Our <br />
+            Welcome to Our <br />
             Restaurant
           </h2>
           <div class="welcome-text">
@@ -174,8 +174,8 @@
             </p>
           </div>
           <div class="welcome-buttons">
-            <a href="" class="btn btn-hero-menu">Menu</a>
-            <a href="" class="btn btn-book-a-table">Book a table</a>
+            <a href="#" class="btn btn-hero-menu">Menu</a>
+            <a href="#" class="btn btn-book-a-table">Book a table</a>
           </div>
         </div>
         <div class="welcome-image">
