--- a/index.html
+++ b/index.html
@@ -178,10 +178,14 @@
             <a href="#" class="btn btn-book-a-table">Book a table</a>
           </div>
         </div>
-        <div class="welcome-image">
-          <img src="./assets/images/big-plate.png" alt="plate" />
-        </div>
+
+        <img
+          class="prato-arrombado"
+          src="./assets/images/big-plate.png"
+          alt="plate"
+        />
       </section>
     </main>
   </body>
 </html>
+'*'
