--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./assets/icons/restaurant-icon.png"
+    />
     <title>Restaurant</title>
     <link
       rel="stylesheet"
@@ -138,25 +143,32 @@
         </div>
         <div class="our-special-dishes-flex">
           <div class="our-special-dishes-box">
-            <img src="./assets/images/third-plate.png" alt="third plate" />
-            <h3>Fish and Veggie</h3>
-            <p>Grilled fish with fresh veggies, light and flavorful!</p>
-          </div>
-
-          <div class="our-special-dishes-box">
-            <img src="./assets/images/third-plate.png" alt="third plate" />
-            <h3>Fish and Veggie</h3>
-            <p>Grilled fish with fresh veggies, light and flavorful!</p>
+            <img src="./assets/images/second-plate.png" alt="third plate" />
+            <h3 class="dishes-title">Fish and Veggie</h3>
+            <p class="dishes-description">
+              Grilled fish with fresh veggies, light and flavorful!
+            </p>
           </div>
           <div class="our-special-dishes-box">
             <img src="./assets/images/third-plate.png" alt="third plate" />
-            <h3>Fish and Veggie</h3>
-            <p>Grilled fish with fresh veggies, light and flavorful!</p>
+            <h3 class="dishes-title">Fish and Veggie</h3>
+            <p class="dishes-description">
+              Grilled fish with fresh veggies, light and flavorful!
+            </p>
           </div>
           <div class="our-special-dishes-box">
-            <img src="./assets/images/third-plate.png" alt="third plate" />
-            <h3>Fish and Veggie</h3>
-            <p>Grilled fish with fresh veggies, light and flavorful!</p>
+            <img src="./assets/images/fourth-plate.png" alt="third plate" />
+            <h3 class="dishes-title">Fish and Veggie</h3>
+            <p class="dishes-description">
+              Grilled fish with fresh veggies, light and flavorful!
+            </p>
+          </div>
+          <div class="our-special-dishes-box">
+            <img src="./assets/images/fifth-plate.png" alt="third plate" />
+            <h3 class="dishes-title">Fish and Veggie</h3>
+            <p class="dishes-description">
+              Grilled fish with fresh veggies, light and flavorful!
+            </p>
           </div>
         </div>
       </section>
@@ -180,7 +192,7 @@
         </div>
 
         <img
-          class="prato-arrombado"
+          class="welcome-plate"
           src="./assets/images/big-plate.png"
           alt="plate"
         />
@@ -188,4 +200,3 @@
     </main>
   </body>
 </html>
-'*'
