--- a/index.html
+++ b/index.html
@@ -141,12 +141,13 @@
           <h2 class="our-special-dishes-title">Our Special Dishes</h2>
           <p class="our-special-dishes-text">Taste the best of our cuisine!</p>
         </div>
+
         <div class="our-special-dishes-flex">
           <div class="our-special-dishes-box">
             <img src="./assets/images/second-plate.png" alt="third plate" />
-            <h3 class="dishes-title">Fish and Veggie</h3>
+            <h3 class="dishes-title">Lumpia with Sauce</h3>
             <p class="dishes-description">
-              Grilled fish with fresh veggies, light and flavorful!
+              Crispy spring rolls served with a sweet and tangy sauce.
             </p>
           </div>
           <div class="our-special-dishes-box">
@@ -158,20 +159,42 @@
           </div>
           <div class="our-special-dishes-box">
             <img src="./assets/images/fourth-plate.png" alt="third plate" />
-            <h3 class="dishes-title">Fish and Veggie</h3>
+            <h3 class="dishes-title">Tofu Chili</h3>
             <p class="dishes-description">
-              Grilled fish with fresh veggies, light and flavorful!
+              Spicy tofu stew with vegetables and bold seasoning.
             </p>
           </div>
           <div class="our-special-dishes-box">
             <img src="./assets/images/fifth-plate.png" alt="third plate" />
-            <h3 class="dishes-title">Fish and Veggie</h3>
+            <h3 class="dishes-title">Egg and Cocumber</h3>
             <p class="dishes-description">
-              Grilled fish with fresh veggies, light and flavorful!
+              Boiled eggs paired with fresh cucumber slices.
             </p>
           </div>
         </div>
       </section>
+      <div>
+        <img
+          src="./assets/images/fourth-plant.svg"
+          alt=""
+          class="first-plant-our-special-dishes"
+        />
+      </div>
+      <div>
+        <img
+          src="./assets/images/fifth-plant.svg"
+          alt=""
+          class="second-plant-our-special-dishes"
+        />
+      </div>
+
+      <div>
+        <img
+          src="./assets/images/sixth-plant.svg"
+          alt=""
+          class="third-plant-our-special-dishes"
+        />
+      </div>
       <section class="welcome-to-our-restaurant">
         <div class="welcome-content">
           <h2 class="welcome-title">
