--- a/index.html
+++ b/index.html
@@ -263,6 +263,17 @@
           />
         </div>
       </section>
+
+      <section class="our-happy-customers">
+        <div class="our-happy-customers-content">
+          <h2 class="our-happy-customers-title">Our Happy Customers</h2>
+          <p class="our-happy-customers-text">
+            Lorem ipsum dolor sit amet, consectetur <br />
+            adipiscing elit, sed do eiusmod tempor incididunt
+          </p>
+        </div>
+        <div></div>
+      </section>
     </main>
   </body>
 </html>
