--- a/index.html
+++ b/index.html
@@ -143,34 +143,37 @@
         </div>
 
         <div class="our-special-dishes-flex">
-          <div class="our-special-dishes-box">
-            <img src="./assets/images/second-plate.png" alt="third plate" />
+          <article class="our-special-dishes-box">
+            <img
+              src="./assets/images/second-plate.png"
+              alt="Lumpia with Sauce"
+            />
             <h3 class="dishes-title">Lumpia with Sauce</h3>
             <p class="dishes-description">
               Crispy spring rolls served with a sweet and tangy sauce.
             </p>
-          </div>
-          <div class="our-special-dishes-box">
-            <img src="./assets/images/third-plate.png" alt="third plate" />
+          </article>
+          <article class="our-special-dishes-box">
+            <img src="./assets/images/third-plate.png" alt="Fish and Veggie" />
             <h3 class="dishes-title">Fish and Veggie</h3>
             <p class="dishes-description">
               Grilled fish with fresh veggies, light and flavorful!
             </p>
-          </div>
-          <div class="our-special-dishes-box">
-            <img src="./assets/images/fourth-plate.png" alt="third plate" />
+          </article>
+          <article class="our-special-dishes-box">
+            <img src="./assets/images/fourth-plate.png" alt="Tofu Chili" />
             <h3 class="dishes-title">Tofu Chili</h3>
             <p class="dishes-description">
               Spicy tofu stew with vegetables and bold seasoning.
             </p>
-          </div>
-          <div class="our-special-dishes-box">
-            <img src="./assets/images/fifth-plate.png" alt="third plate" />
+          </article>
+          <article class="our-special-dishes-box">
+            <img src="./assets/images/fifth-plate.png" alt="Egg and Cocumber" />
             <h3 class="dishes-title">Egg and Cocumber</h3>
             <p class="dishes-description">
               Boiled eggs paired with fresh cucumber slices.
             </p>
-          </div>
+          </article>
         </div>
       </section>
       <div>
@@ -274,6 +277,106 @@
         </div>
         <div></div>
       </section>
+      <section class="newsletter-subscribe">
+        <div class="newsletter-subscribe-content">
+          <img
+            src="./assets/images/ambient-horizontal-image.png"
+            alt=""
+            class="newsletter-subscribe-image"
+          />
+          <h3 class="newsletter-subscribe-title">
+            Get Or Promo Code by <br />
+            Subscribing To our Newsletter
+          </h3>
+
+          <input
+            class="stylized-input"
+            type="text"
+            placeholder="Enter your email"
+          />
+          <button class="newsletter-subscribe-button">Subscribe</button>
+        </div>
+      </section>
+      <footer>
+        <div class="footer-content">
+          <div class="footer-about">
+            <img
+              src="./assets/icons/logo-restaurant.png"
+              alt="Logo Restaurant"
+            />
+            <p class="footer-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore .Learn more
+            </p>
+          </div>
+
+          <ul class="footer-list">
+            <li>
+              <h3 class="list-title">NAVIGATION</h3>
+              <ul>
+                <li class="footer-link"><a href="#"> </a>Menu</li>
+                <li class="footer-link"><a href="#"> </a>About Us</li>
+                <li class="footer-link"><a href="#"> </a>Contact Us</li>
+                <li class="footer-link"><a href="#"> </a>Main dishes</li>
+              </ul>
+            </li>
+          </ul>
+
+          <ul class="footer-list">
+            <li>
+              <h3 class="list-title">DISHES</h3>
+              <ul>
+                <li class="footer-link"><a href="#"> </a>Fish & Viggies</li>
+                <li class="footer-link"><a href="#"> </a>Tofu Chill</li>
+                <li class="footer-link"><a href="#"> </a>Egg & Cocumber</li>
+                <li class="footer-link"><a href="#"> </a>Lumpia w/Sauce</li>
+              </ul>
+            </li>
+          </ul>
+
+          <ul class="footer-list">
+            <li>
+              <h3 class="list-title">FOLLOW US</h3>
+              <ul>
+                <div class="hero-social-media">
+                  <a href="#" class="hero-link" id="facebook">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </a>
+                  <a href="#" class="hero-link" id="instagram">
+                    <i class="fa-brands fa-instagram"></i>
+                  </a>
+                  <a href="#" class="hero-link" id="twitter">
+                    <i class="fa-brands fa-twitter"></i>
+                  </a>
+                </div>
+              </ul>
+            </li>
+          </ul>
+          <div class="opening-hours-container">
+            <ul class="opening-list">
+              <li>
+                <h3 class="list-title">OPENING HOURS</h3>
+                <ul>
+                  <p class="footer-text">
+                    Monday - Friday <br />
+                    8:00 am to 9:00 pm
+                  </p>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-line-container">
+          <img
+            src="./assets/images/footer-line.svg"
+            alt=""
+            class="footer-line"
+          />
+        </div>
+        <div class="footer-copyright">
+          <p class="footer-text">&#169; 2025 Restaurants. All Right Reserved</p>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
