--- a/index.html
+++ b/index.html
@@ -275,28 +275,78 @@
             adipiscing elit, sed do eiusmod tempor incididunt
           </p>
         </div>
-        <div class="our-happy-customers-flex">
-          <div class="our-happy-customers-box">
-            <img
-              class="our-happy-customers-person-image"
-              src="./assets/images/first-person-image.png"
-              alt="person"
-            />
-            <img class="stars" src="./assets/icons/Stars.svg" alt="stars" />
-            <p class="our-happy-customers-review">
-              Lorem ipsum dolor sit amet consectetur. Tortor <br />
-              massa nisl quam sit. Vitae congue ultrices neque<br />
-              penatibus mi in quisque. Leo in cursus enim<br />
-              magnis ante. Proin iaculis platea ipsum sagittis ac<br />
-              eu aliquam quis. Ornare tincidunt tempus semper.
-            </p>
-            <p class="our-happy-customers-name">
-              <span class="highlight-name"> Ama pomah </span> <br />
-              CEO & Founder Inc
-            </p>
+        <div class="carousel">
+          <input type="radio" name="carousel" id="slide1" checked />
+          <input type="radio" name="carousel" id="slide2" />
+          <input type="radio" name="carousel" id="slide3" />
+          <div class="slides">
+            <div class="slide">
+              <img
+                class="our-happy-customers-person-image"
+                src="./assets/images/ama-person-image.png"
+                alt="person"
+              />
+              <img class="stars" src="./assets/icons/Stars.svg" alt="stars" />
+              <p class="our-happy-customers-review">
+                Lorem ipsum dolor sit amet consectetur. Tortor <br />
+                massa nisl quam sit. Vitae congue ultrices neque<br />
+                penatibus mi in quisque. Leo in cursus enim<br />
+                magnis ante. Proin iaculis platea ipsum sagittis ac<br />
+                eu aliquam quis. Ornare tincidunt tempus semper.
+              </p>
+              <p class="our-happy-customers-name">
+                <span class="highlight-name"> Ama pomah </span> <br />
+                CEO & Founder Inc
+              </p>
+            </div>
+            <div class="slide">
+              <img
+                class="our-happy-customers-person-image"
+                src="./assets/images/kauan-person-image.png"
+                alt="person"
+              />
+              <img class="stars" src="./assets/icons/Stars.svg" alt="stars" />
+              <p class="our-happy-customers-review">
+                Lorem ipsum dolor sit amet consectetur. Tortor <br />
+                massa nisl quam sit. Vitae congue ultrices neque<br />
+                penatibus mi in quisque. Leo in cursus enim<br />
+                magnis ante. Proin iaculis platea ipsum sagittis ac<br />
+                eu aliquam quis. Ornare tincidunt tempus semper.
+              </p>
+              <p class="our-happy-customers-name">
+                <span class="highlight-name"> Kauan Silva </span> <br />
+                CEO & Founder Inc
+              </p>
+            </div>
+
+            <div class="slide">
+              <img
+                class="our-happy-customers-person-image"
+                src="./assets/images/erick-person-image.png"
+                alt="person"
+              />
+              <img class="stars" src="./assets/icons/Stars.svg" alt="stars" />
+              <p class="our-happy-customers-review">
+                Lorem ipsum dolor sit amet consectetur. Tortor <br />
+                massa nisl quam sit. Vitae congue ultrices neque<br />
+                penatibus mi in quisque. Leo in cursus enim<br />
+                magnis ante. Proin iaculis platea ipsum sagittis ac<br />
+                eu aliquam quis. Ornare tincidunt tempus semper.
+              </p>
+              <p class="our-happy-customers-name">
+                <span class="highlight-name"> Erick Jacquin</span> <br />
+                CEO & Founder Inc
+              </p>
+            </div>
           </div>
         </div>
+        <div class="nav-slide">
+          <label for="slide1"></label>
+          <label for="slide2"></label>
+          <label for="slide3"></label>
+        </div>
       </section>
+
       <section class="newsletter-subscribe">
         <div class="newsletter-subscribe-content">
           <img
