--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
             best food for you
           </h1>
           <p class="hero-text">
-            Lorem ipsum dolor sit amet, consectetur <br />
-            adipiscing elit, sed do eiusmod tempor incididunt <br />
-            ut labore et dolore magna aliqua.
+            Fresh food, cozy vibes, and unforgettable<br />
+            flavors made to delight every single moment.
           </p>
           <div class="hero-buttons">
             <a href="#" class="btn btn-hero-menu">Menu</a>
@@ -268,6 +267,13 @@
       </section>
 
       <section class="our-happy-customers">
+        <div>
+          <img
+            src="./assets/images/pan-image.svg"
+            alt=""
+            class="pan-image-our-happy-customers"
+          />
+        </div>
         <div class="our-happy-customers-content">
           <h2 class="our-happy-customers-title">Our Happy Customers</h2>
           <p class="our-happy-customers-text">
@@ -288,11 +294,10 @@
               />
               <img class="stars" src="./assets/icons/Stars.svg" alt="stars" />
               <p class="our-happy-customers-review">
-                Lorem ipsum dolor sit amet consectetur. Tortor <br />
-                massa nisl quam sit. Vitae congue ultrices neque<br />
-                penatibus mi in quisque. Leo in cursus enim<br />
-                magnis ante. Proin iaculis platea ipsum sagittis ac<br />
-                eu aliquam quis. Ornare tincidunt tempus semper.
+                Had the pasta and it was amazing. The sauce<br />
+                tasted homemade and full of flavor. A warm<br />
+                and comfortable space to enjoy good food.<br />
+                Definitely a place to visit again soon.<br />
               </p>
               <p class="our-happy-customers-name">
                 <span class="highlight-name"> Ama pomah </span> <br />
@@ -307,15 +312,14 @@
               />
               <img class="stars" src="./assets/icons/Stars.svg" alt="stars" />
               <p class="our-happy-customers-review">
-                Lorem ipsum dolor sit amet consectetur. Tortor <br />
-                massa nisl quam sit. Vitae congue ultrices neque<br />
-                penatibus mi in quisque. Leo in cursus enim<br />
-                magnis ante. Proin iaculis platea ipsum sagittis ac<br />
-                eu aliquam quis. Ornare tincidunt tempus semper.
+                Delicious meals and fast service. The steak <br />
+                was juicy and well-seasoned. Great spot for a<br />
+                quick lunch or a relaxed dinner. Prices are<br />
+                fair and portions generous. Highly recommend.<br />
               </p>
               <p class="our-happy-customers-name">
                 <span class="highlight-name"> Kauan Silva </span> <br />
-                CEO & Founder Inc
+                Engineer
               </p>
             </div>
 
@@ -327,15 +331,14 @@
               />
               <img class="stars" src="./assets/icons/Stars.svg" alt="stars" />
               <p class="our-happy-customers-review">
-                Lorem ipsum dolor sit amet consectetur. Tortor <br />
-                massa nisl quam sit. Vitae congue ultrices neque<br />
-                penatibus mi in quisque. Leo in cursus enim<br />
-                magnis ante. Proin iaculis platea ipsum sagittis ac<br />
-                eu aliquam quis. Ornare tincidunt tempus semper.
+                The food was incredible and fresh. Loved the.<br />
+                cozy vibe of the place. Staff was super friendly<br />
+                and made us feel welcome. Will come back for<br />
+                sure. Perfect for dinner with family or friends.<br />
               </p>
               <p class="our-happy-customers-name">
                 <span class="highlight-name"> Erick Jacquin</span> <br />
-                CEO & Founder Inc
+                Master Chef
               </p>
             </div>
           </div>
@@ -375,8 +378,9 @@
               alt="Logo Restaurant"
             />
             <p class="footer-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore .Learn more
+              Welcome to Restaurant – delicious, home-style meals made with
+              fresh, quality ingredients. Perfect for lunch, dinner, or special
+              moments with family.
             </p>
           </div>
 
