--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
           </h2>
           <div class="welcome-text">
             <p>
-              Lorem ipsum dolor sit amet, consectetur <br />
-              adipiscing elit, sed do eiusmod tempor incididunt
-              <br />ut labore et dolore magna aliqua.
+              Welcome to our culinary haven<br />
+              where every dish tells a story of tradition
+              <br />prepared with care.
             </p>
           </div>
           <div class="welcome-buttons">
