--- a/index.html
+++ b/index.html
@@ -21,16 +21,20 @@
   <body>
     <header>
       <div class="borders">
-        <img src="./assets/images/second-ellipse.svg" alt="" class="border" />
+        <img
+          src="./assets/images/second-ellipse.svg"
+          alt="borders"
+          class="border"
+        />
         <img
           src="./assets/images/ellipse-svg.svg"
-          alt=""
+          alt="borders"
           class="second-border"
         />
 
         <img
           src="./assets/images/ellipse-svg.svg"
-          alt=""
+          alt="borders"
           class="third-border"
         />
       </div>
@@ -116,6 +120,7 @@
               class="hero-img-first-plant"
               src="./assets/images/first-plant.svg"
               alt="first-plant"
+              loading="lazy"
             />
           </div>
           <div>
@@ -123,6 +128,7 @@
               class="hero-img-second-plant"
               src="./assets/images/second-plant.svg"
               alt="second-plant"
+              loading="lazy"
             />
           </div>
           <div>
@@ -130,6 +136,7 @@
               class="hero-img-third-plant"
               src="./assets/images/third-plant.svg"
               alt="third-plant"
+              loading="lazy"
             />
           </div>
         </div>
@@ -153,22 +160,34 @@
             </p>
           </article>
           <article class="our-special-dishes-box">
-            <img src="./assets/images/third-plate.png" alt="Fish and Veggie" />
+            <img
+              src="./assets/images/third-plate.png"
+              alt="Fish and Veggie"
+              loading="lazy"
+            />
             <h3 class="dishes-title">Fish and Veggie</h3>
             <p class="dishes-description">
               Grilled fish with fresh veggies, light and flavorful!
             </p>
           </article>
           <article class="our-special-dishes-box">
-            <img src="./assets/images/fourth-plate.png" alt="Tofu Chili" />
+            <img
+              src="./assets/images/fourth-plate.png"
+              alt="Tofu Chili"
+              loading="lazy"
+            />
             <h3 class="dishes-title">Tofu Chili</h3>
             <p class="dishes-description">
               Spicy tofu stew with vegetables and bold seasoning.
             </p>
           </article>
           <article class="our-special-dishes-box">
-            <img src="./assets/images/fifth-plate.png" alt="Egg and Cocumber" />
-            <h3 class="dishes-title">Egg and Cocumber</h3>
+            <img
+              src="./assets/images/fifth-plate.png"
+              alt="Egg and Cucumber"
+              loading="lazy"
+            />
+            <h3 class="dishes-title">Egg and Cucumber</h3>
             <p class="dishes-description">
               Boiled eggs paired with fresh cucumber slices.
             </p>
@@ -178,14 +197,14 @@
       <div>
         <img
           src="./assets/images/fourth-plant.svg"
-          alt=""
+          alt="plant"
           class="first-plant-our-special-dishes"
         />
       </div>
       <div>
         <img
           src="./assets/images/fifth-plant.svg"
-          alt=""
+          alt="plant"
           class="second-plant-our-special-dishes"
         />
       </div>
@@ -193,7 +212,7 @@
       <div>
         <img
           src="./assets/images/sixth-plant.svg"
-          alt=""
+          alt="plant"
           class="third-plant-our-special-dishes"
         />
       </div>
@@ -255,6 +274,7 @@
             class="piece-of-garlic-image"
             src="./assets/images/piece-of-garlic-image.svg"
             alt="leaf"
+            loading="lazy"
           />
         </div>
         <div>
@@ -270,15 +290,16 @@
         <div>
           <img
             src="./assets/images/pan-image.svg"
-            alt=""
+            alt="pan"
             class="pan-image-our-happy-customers"
+            loading="lazy"
           />
         </div>
         <div class="our-happy-customers-content">
           <h2 class="our-happy-customers-title">Our Happy Customers</h2>
           <p class="our-happy-customers-text">
-            Lorem ipsum dolor sit amet, consectetur <br />
-            adipiscing elit, sed do eiusmod tempor incididunt
+            Our customers love the unforgettable flavors <br />
+            Check out their reviews!
           </p>
         </div>
         <div class="carousel">
@@ -354,11 +375,12 @@
         <div class="newsletter-subscribe-content">
           <img
             src="./assets/images/ambient-horizontal-image.png"
-            alt=""
+            alt="image of the restaurant ambient"
             class="newsletter-subscribe-image"
+            loading="lazy"
           />
           <h3 class="newsletter-subscribe-title">
-            Get Or Promo Code by <br />
+            Get Our Promo Code by <br />
             Subscribing To our Newsletter
           </h3>
 
@@ -376,7 +398,9 @@
             <img
               src="./assets/icons/logo-restaurant.png"
               alt="Logo Restaurant"
+              loading="lazy"
             />
+
             <p class="footer-text">
               Welcome to Restaurant – delicious, home-style meals made with
               fresh, quality ingredients. Perfect for lunch, dinner, or special
@@ -400,9 +424,9 @@
             <li>
               <h3 class="list-title">DISHES</h3>
               <ul>
-                <li class="footer-link"><a href="#"> </a>Fish & Viggies</li>
+                <li class="footer-link"><a href="#"> </a>Fish & Veggies</li>
                 <li class="footer-link"><a href="#"> </a>Tofu Chill</li>
-                <li class="footer-link"><a href="#"> </a>Egg & Cocumber</li>
+                <li class="footer-link"><a href="#"> </a>Egg & Cucumber</li>
                 <li class="footer-link"><a href="#"> </a>Lumpia w/Sauce</li>
               </ul>
             </li>
@@ -443,7 +467,7 @@
         <div class="footer-line-container">
           <img
             src="./assets/images/footer-line.svg"
-            alt=""
+            alt="line"
             class="footer-line"
           />
         </div>
